# anyvec-312

./: Installer.sh  README.md  docker-compose.yaml  model.py  pyproject.toml  requirements.txt
Vectorizer/: bytes_vector.py  dockerfile  model.py  requirements.txt
anyvec/: dockerfile  model.py
api/: dockerfile  main.py  pyproject.toml
api/Vectorizer/: text_image_vector.py  video_audio_vector.py
api/package/: AnyVec.py
