[project]
name = "anyvec-312"
version = "0.1.0"
description = ""
authors = [
    {name = "Monish Sinha",email = "monish9sinha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
